@startuml

package "java.lang" {
	class RuntimeException
}

package "olivares" {
	Partido "1" o-- "*" Lanzamiento: -lanzamientos
	package "estrategias" {
		Estrategia <|-- Diferencia
		Estrategia <|-- NlogN
		Estrategia <|-- Cuadratica
		Estrategia <|-- MejorEstrategia
		Diferencia <--- MejorEstrategia
		NlogN      <--- MejorEstrategia
	}
	Partido o-- Estrategia: -estrategia
	RuntimeException <|-- LanzamientoNoValido
}

class Lanzamiento {
	-x: int
	-y: int
	+esFavorable(): boolean
	+getDistanciaCadrado(): double
}
class Partido {
	+agregar(lanzamiento: Lanzamiento): boolean
	+setEstrategia(estrategia: Estrategia): void
	+obtenerMejorR2(): int
}
abstract class Estrategia {
	{abstract} +obtenerMejorR2(lanzamientos: List<Lanzamiento>): int
	#getDistanciaMaxima(lanzamientos: List<Lanzamiento>): double
}
class NlogN {
	+obtenerMejorR2(lanzamientos: List<Lanzamiento>): int
}
class Diferencia {
	+obtenerMejorR2(lanzamientos: List<Lanzamiento>): int
}
class Cuadratica {
	+obtenerMejorR2(lanzamientos: List<Lanzamiento>): int
}
class MejorEstrategia {
	+obtenerMejorR2(lanzamientos: List<Lanzamiento>): int
}
@enduml
